--- a/src/components/group-item/style.less
+++ b/src/components/group-item/style.less
@@ -25,6 +25,7 @@
     position: relative; //这个是为了兼容group容器onepx方案被before挡住而做的
     display: flex;
     align-items: center;
+    border-bottom: 1px solid #eee;
     p {
       margin: 0;
     }
